Fixed scrolling issue by setting the overflow:hidden status for all body type elements in the website

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,6 +1,7 @@
 
 body{
     margin:0;
+    overflow-x: hidden;
 }
 .menu_ul{
     float:right;/*Make the menu appear on the right of the website*/
